--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "chess.js": "^0.10.2",
+    "chessboardjs": "0.0.1",
+    "jquery": "^3.3.1",
+    "material-ui": "^0.20.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "socket.io-client": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
