--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "material-ui": "^0.20.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-flexbox-grid": "^2.0.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "socket.io-client": "^2.1.0"
   },
